// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCardFooter customize 1`] = `
<div>
  <div
    class="card-footer bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CCardFooter component 1`] = `
<div>
  <div
    class="card-footer"
  >
    Test
  </div>
</div>
`;
